--- a/src/components/home.css
+++ b/src/components/home.css
@@ -47,12 +47,48 @@ h2 {
   color: #ffffff;
 }
 
-.img1{
-    margin-top: 70px;
-    height: 300px;
-    width: 300px;
-    border-radius: 200px;
+.header__right {
+  position: relative;
+  width: 320px;
+  height: 320px;
+  margin-top: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.img1 {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  object-fit: cover;
+  z-index: 2;
+  margin-top: 20px;
+}
+
+.header__right::before {
+  content: '';
+  position: absolute;
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  border-top: 4px solid #146fc4; 
+  border-bottom: 4px solid aliceblue; 
+  animation: rotate 2s linear infinite;
+  z-index: 1;
+  margin-top: 20px;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .social__icons {
   display: flex;
   justify-content: center;
