--- a/src/components/project.css
+++ b/src/components/project.css
@@ -56,12 +56,13 @@ html, body {
 .project-img {
   max-width: 40%;
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .project-img img {
   width: 100%;
   border-radius: 10px;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.5); 
 }
 
 .project-nav-btns {
